--- a/src/app/ui/App.scss
+++ b/src/app/ui/App.scss
@@ -90,10 +90,14 @@ legend {
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
+html {
+  overflow: hidden;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
   background-color: #181a1b;
   color: #e0e0e0;
-  height: 100%;
+  position: relative;
   overflow: hidden;
 }
