--- a/src/features/Task/ui/Task.module.scss
+++ b/src/features/Task/ui/Task.module.scss
@@ -8,7 +8,12 @@
   cursor: grab;
   flex: 0 0 33%;
 
-  &__titleContaienr {
+  &:hover {
+    box-shadow: 0 3px 10px rgba(191, 137, 241, 0.5);
+    border-left: 1px solid #b47fe6;
+  }
+
+  &__titleContainer {
     font-size: 16px;
     color: #e5ccff;
     display: flex;
@@ -31,6 +36,7 @@
     outline: none;
 
     &:focus, &:hover {
+      background: rgba(192, 132, 252, 0.2);
       border: 1px solid #e5ccff;
     }
   }
@@ -71,12 +77,14 @@
   }
 
   &__description {
+    field-sizing: content;
+    width: 100%;
+    resize: none;
     border: 2px solid #2c2f48;
     border-radius: 5px;
     padding: 6px;
     font-size: 12px;
     margin-bottom: 12px;
-    cursor: pointer;
     transition: background 0.3s ease;
 
     &:hover {
@@ -100,13 +108,41 @@
     }
   }
 
-  &__subtasks {
-    //margin-top: ;
+  &__loadedFile {
+    font-size: 12px;
   }
+}
 
-  &:hover {
-    box-shadow: 0 3px 10px rgba(191, 137, 241, 0.5);
-    border-left: 1px solid #b47fe6;
+@media (max-width: 768px) {
+  .task {
+
+    &__titleContainer {
+      font-size: 14px;
+    }
+
+    &__dates {
+      font-size: 10px;
+    }
+
+    &__priority {
+      font-size: 12px;
+    }
+
+    &__descriptionNote {
+      font-size: 12px;
+    }
+
+    &__description {
+      font-size: 10px;
+    }
+
+    &__dropzone {
+      font-size: 10px;
+    }
+
+    &__loadedFile {
+      font-size: 10px;
+    }
   }
 }
 
