--- a/src/features/Task/ui/TaskComments.module.scss
+++ b/src/features/Task/ui/TaskComments.module.scss
@@ -5,9 +5,12 @@
   cursor: auto;
 
   &__comment {
-    font-size: 13px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 12px;
     background: #2c2f48;
-    padding: 8px;
+    padding: 6px;
     margin-top: 8px;
     border-radius: 10px;
     border-left: 2px solid #777;
@@ -18,14 +21,35 @@
   }
 
   &__replyButton {
-    margin-left: auto;
-    margin-top: 4px;
     border-radius: 6px;
     height: 18px;
-    font-size: 13px;
+    font-size: 12px;
   }
 
   &__addCommentButton {
+    font-size: 14px;
     margin-top: 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  .taskComments {
+    font-size: 12px;
+
+    &__comment {
+      font-size: 10px;
+    }
+
+    &__replyButton {
+      border-radius: 6px;
+      height: 18px;
+      font-size: 10px;
+      padding: 0 6px;
+    }
+
+    &__addCommentButton {
+      height: 24px;
+      font-size: 12px;
+    }
   }
 }
