--- a/src/pages/ProjectsSelection/ui/ProjectCard.module.scss
+++ b/src/pages/ProjectsSelection/ui/ProjectCard.module.scss
@@ -1,13 +1,31 @@
 .projectCard {
   height: fit-content;
-  width: 300px;
-  border: 2px solid;
-  border-color: black;
+  max-width: 400px;
+  flex: 0 0 45%;
+  background: linear-gradient(135deg, #2a2d3e, #1a1c2b);
+  border-radius: 15px;
+  box-shadow: 0 3px 10px rgba(138, 43, 226, 0.5);
+  border-left: 1px solid #8a2be2;
+  transition: 0.3s ease;
+
+  &_closed {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+
+  &:hover {
+    box-shadow: 0 3px 10px rgba(191, 137, 241, 0.5);
+    border-left: 1px solid #b47fe6;
+  }
+
+  &__link {
+    display: block;
+  }
 
   &__imageContainer {
     width: 100%;
-    height: 400px;
     overflow: hidden;
+    border-radius: 15px;
   }
 
   &__image {
@@ -16,15 +34,69 @@
     object-fit: cover;
   }
 
+  &__infoWrapper {
+    padding: 14px;
+    text-align: right;
+  }
+
   &__title {
+    text-align: left;
     font-size: 20px;
+    color: #ffffff;
+    font-weight: bold;
+    margin-bottom: 10px;
   }
 
   &__description {
-    font-size: 14px;
+    text-align: left;
+    color: #ffffff;
+    font-size: 13px;
   }
 
   &__status {
     font-size: 16px;
+    margin-top: 12px;
+    height: 36px;
+    display: inline-flex;
+    padding: 0 14px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    color: #e4e4e4;
+    cursor: pointer;
+
+    &_closed {
+      background-color: #434a60;
+    }
+
+    &_active {
+      background-color: #00431f;
+    }
+  }
+}
+
+@media (max-width: 1280px) {
+  .projectCard {
+
+    &__title {
+      font-size: 18px;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .projectCard {
+
+    &__title {
+      font-size: 16px;
+    }
+
+    &__description {
+      font-size: 12px;
+    }
+
+    &__infoWrapper {
+      padding: 10px;
+    }
   }
 }
