--- a/src/pages/ProjectsSelection/ui/ProjectsSelection.module.scss
+++ b/src/pages/ProjectsSelection/ui/ProjectsSelection.module.scss
@@ -2,14 +2,44 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  height: 100vh;
+  gap: 70px;
 
   &__title {
-    font-size: 32px;
+    font-size: 52px;
   }
 
   &__list {
     display: flex;
-    gap: 100px;
+    gap: 30px;
     justify-content: center;
+  }
+}
+
+@media (max-width: 1280px) {
+  .projectSelection {
+
+    &__title {
+      font-size: 38px;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .projectSelection {
+
+    &__title {
+      font-size: 28px;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .projectSelection {
+
+    &__title {
+      font-size: 20px;
+    }
   }
 }
