--- a/src/pages/ProjectsSelection/ui/ProjectsSelection.module.scss
+++ b/src/pages/ProjectsSelection/ui/ProjectsSelection.module.scss
@@ -1,17 +1,24 @@
 .projectSelection {
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  height: 100vh;
-  gap: 70px;
+  justify-content: space-around;
 
   &__title {
-    font-size: 52px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+    flex: 0 0 10%;
+    height: 10%;
   }
 
   &__list {
+    padding: 14px;
+    overflow: auto;
     display: flex;
+    flex-wrap: wrap;
     gap: 30px;
     justify-content: center;
   }
@@ -39,7 +46,7 @@
   .projectSelection {
 
     &__title {
-      font-size: 20px;
+      font-size: 24px;
     }
   }
 }
