--- a/src/shared/ui/Button.module.scss
+++ b/src/shared/ui/Button.module.scss
@@ -1,3 +1,5 @@
+@import 'src/app/ui/colorsVariable';
+
 .button {
   font-size: 13px;
   height: 30px;
@@ -6,13 +8,13 @@
   align-items: center;
   padding: 0 16px;
   border: none;
-  background: #403b5e;
-  color: #ffffff;
+  background: $purple-200;
+  color: $white;
   cursor: pointer;
   border-radius: 8px;
   transition: background 0.3s ease;
 
   &:hover {
-    background: #4d4481;
+    background: $purple-300;
   }
 }
