--- a/src/app/ui/App.scss
+++ b/src/app/ui/App.scss
@@ -29,10 +29,10 @@ aside, nav, footer, header, section, main {
   display: block;
 }
 
-h1, h2, h3, h4, h5, h6, p {
-  font-size: inherit;
-  font-weight: inherit;
-}
+//h1, h2, h3, h4, h5, h6, p {
+//  //font-size: auto;
+//  font-weight: inherit;
+//}
 
 ul, ul li {
   list-style: none;
