--- a/src/app/ui/colorsVariable.scss
+++ b/src/app/ui/colorsVariable.scss
@@ -3,6 +3,12 @@ $green: #005c2a;
 $yellow: #8a7b00;
 $turquoise: #006161;
 $red: #6a000a;
+$blue: #6bffff;
+
+$green-hover: #008a40;
+$yellow-hover: #ae9c00;
+$turquoise-hover: #009393;
+$red-hover: #9a000e;
 
 $dark-background: linear-gradient(135deg, #2a2d3e, #1a1c2b);
 
