--- a/src/entities/Task/ui/Task.module.scss
+++ b/src/entities/Task/ui/Task.module.scss
@@ -1,4 +1,5 @@
 @import 'src/app/ui/colorsVariable';
+@import 'src/app/ui/mixins';
 
 .task {
   background: $dark-background;
@@ -44,13 +45,54 @@
     }
   }
 
-  &__dates {
-    font-size: 12px;
-    color: $gray-700;
+  &__subtasks {
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
+
+  &__subtasksItem {
+    height: 24px;
+    display: flex;
+    width: fit-content;
+    align-items: center;
+    justify-content: start;
+    font-size: 16px;
+    border-radius: 5px;
+    padding: 0 12px;
+    cursor: pointer;
+    background-color: $purple-100;
+    border: 1px solid $gray-500;
+    transition: 0.3s;
+    margin-top: 4px;
+
+    &:hover {
+      background-color: $purple-200;
+    }
   }
 
   &__descriptionNote {
     font-size: 14px;
+    margin-bottom: 12px;
+  }
+
+  &__description {
+    min-height: 30px;
+    margin-top: 6px;
+    padding: 4px;
+    font-size: 13px;
+    max-height: 300px;
+    width: 100%;
+    overflow: auto;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    transition: 0.3s ease;
+    outline: none;
+    @include scrollbar;
+
+    &:focus, &:hover {
+      background: rgba(192, 132, 252, 0.2);
+      border: 1px solid $purple-900;
+    }
   }
 
   &__dropzone {
@@ -69,8 +111,18 @@
     }
   }
 
+  &__files {
+    margin-bottom: 10px;
+  }
+
   &__loadedFile {
-    font-size: 12px;
+    font-size: 14px;
+  }
+
+  &__buttonsBlock {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 
   &_done {
@@ -100,6 +152,7 @@
 
     &__description {
       font-size: 10px;
+      max-height: 200px;
     }
 
     &__dropzone {
@@ -115,6 +168,11 @@
 :global {
   .tox-toolbar__primary {
     justify-content: space-between;
+  }
+
+  .finded-task {
+    box-shadow: 0 0 20px $blue;
+    opacity: 1;
   }
 }
 
