--- a/src/pages/ProjectTasks/ui/ProjectTasks.module.scss
+++ b/src/pages/ProjectTasks/ui/ProjectTasks.module.scss
@@ -1,14 +1,81 @@
+@import 'src/app/ui/colorsVariable';
+@import 'src/app/ui/mixins';
+
 .projectTasks {
   max-width: 1900px;
   margin: 0 auto;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+
+  &__searchWrapper {
+    max-width: 800px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 5%;
+    font-size: 24px;
+    gap: 16px;
+    padding: 10px;
+  }
+
+  &__inputWrapper {
+    width: 100%;
+    position: relative;
+  }
+
+  &__searchInput {
+    width: 100%;
+    resize: none;
+    overflow: hidden;
+    border-radius: 5px;
+    transition: 0.3s ease;
+    outline: none;
+    border: 3px solid $purple-300;
+    height: 30px;
+
+    &:focus, &:hover {
+      background: rgba(192, 132, 252, 0.2);
+      border: 3px solid $purple-900;
+    }
+  }
+
+  &__searchResult {
+    width: 100%;
+    position: absolute;
+    top: 30px;
+    left: 0;
+    height: fit-content;
+    background: $purple-100;
+    border-radius: 5px;
+    font-size: 20px;
+    padding: 6px;
+    max-height: 300px;
+    overflow: auto;
+    z-index: 10;
+    @include scrollbar;
+
+    &_hidden {
+      opacity: 0;
+      cursor: default;
+    }
+  }
 
   &__columnsContainer {
+    max-width: 1800px;
+    height: 95%;
     display: flex;
-    margin: 0 auto;
+    width: 100%;
   }
 
   &__backButton {
-    font-size: 24px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
     padding: 8px;
     position: absolute;
     bottom: 20px;
@@ -16,13 +83,26 @@
   }
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 768px) {
+  .projectTasks {
+    &__searchWrapper {
+      font-size: 18px;
+    }
+  }
+}
+
+@media (max-width: 1400px) {
   .projectTasks {
     &__columnsContainer {
       overflow-x: scroll;
+      overflow-y: hidden;
 
       &::-webkit-scrollbar {
-        width: 0;
+        height: 0;
+      }
+      &::-webkit-scrollbar-track {
+        background-color: #e5ccff;
+        border-radius: 100px;
       }
     }
   }
