--- a/src/pages/ProjectTasks/ui/TasksColumn.module.scss
+++ b/src/pages/ProjectTasks/ui/TasksColumn.module.scss
@@ -2,16 +2,18 @@
 @import 'src/app/ui/mixins';
 
 .tasksColumn {
-  width: 33%;
-  flex: 0 0 33%;
+  width: 33.333%;
+  flex: 0 0 33.333%;
   display: flex;
   flex-direction: column;
+  border-radius: 20px;
+  transition: 0.3s;
 
   &__header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex: 0 0 7vh;
+    flex: 0 0 6%;
     padding: 0 10px;
   }
 
@@ -22,13 +24,18 @@
   &__tasksContainer {
     overflow: auto;
     max-height: 100%;
-    flex: 0 0 93vh;
+    flex: 0 0 94%;
     display: flex;
     flex-direction: column;
     gap: 20px;
     padding: 8px;
 
     @include scrollbar;
+  }
+
+  @media (max-width: 1400px) {
+    width: 40%;
+    flex: 0 0 40%;
   }
 
   @media (max-width: 1280px) {
@@ -61,5 +68,9 @@
   @media (max-width: 480px) {
     width: 95%;
     flex: 0 0 95%;
+  }
+
+  &_active {
+    box-shadow: 0 0 10px $blue;
   }
 }
