--- a/src/app/ui/mixins.scss
+++ b/src/app/ui/mixins.scss
@@ -38,7 +38,7 @@
     flex-direction: column;
     z-index: 100;
     width: 60%;
-    //max-height: 90%;
+    max-height: 90%;
     position: absolute;
     border-radius: 5px;
     transform: translate(-50%, -50%);
