--- a/src/entities/Task/ui/PrioritySelect.module.scss
+++ b/src/entities/Task/ui/PrioritySelect.module.scss
@@ -13,6 +13,7 @@
   border: 1px solid $gray-500;
 
   &__wrapper {
+    position: relative;
     margin: 12px 0;
   }
 
@@ -27,7 +28,8 @@
 
   &__priorities {
     background-color: $purple-100;
-    position: relative;
+    position: absolute;
+    left: 0;
     width: fit-content;
     z-index: 50;
     display: flex;
