--- a/src/shared/ui/Button.module.scss
+++ b/src/shared/ui/Button.module.scss
@@ -12,6 +12,7 @@
   color: $white;
   cursor: pointer;
   border-radius: 8px;
+  width: fit-content;
   transition: background 0.3s ease;
 
   &__disabled {
