--- a/src/features/TaskSubtasks/ui/TaskSubtasks.module.scss
+++ b/src/features/TaskSubtasks/ui/TaskSubtasks.module.scss
@@ -1,8 +1,13 @@
 @import 'src/shared/styles/colorsVariable';
 
 .taskSubtasks {
-  &__subtasks {
-    font-size: 14px;
+  font-size: 14px;
+  margin-bottom: 10px;
+
+  &__subtasksList {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
     margin-bottom: 10px;
   }
 
@@ -20,7 +25,6 @@
     background-color: $purple-100;
     border: 1px solid $gray-500;
     transition: 0.3s;
-    margin-top: 4px;
 
     &:hover {
       background-color: $purple-200;
