--- a/src/features/TasksSearch/ui/TasksSearch.module.scss
+++ b/src/features/TasksSearch/ui/TasksSearch.module.scss
@@ -2,6 +2,17 @@
 @import 'src/shared/styles/mixins';
 
 .tasksSearch {
+  &__searchOuter {
+    z-index: 10;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    cursor: default;
+  }
+
   &__searchWrapper {
     max-width: 800px;
     width: 100%;
@@ -47,13 +58,8 @@
     padding: 6px;
     max-height: 300px;
     overflow: auto;
-    z-index: 10;
+    z-index: 20;
     @include scrollbar;
-
-    &_hidden {
-      opacity: 0;
-      cursor: default;
-    }
   }
 
   &__searchedTask {
